# src/services/api/models/Answers.ts
@@ -1,0 +1,72 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pretendent backend
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    Answer,
+    AnswerFromJSON,
+    AnswerFromJSONTyped,
+    AnswerToJSON,
+} from './';
+
+/**
+ * User GUID and all responses received
+ * @export
+ * @interface Answers
+ */
+export interface Answers {
+    /**
+     * GUID
+     * @type {string}
+     * @memberof Answers
+     */
+    userGUID: string;
+    /**
+     * 
+     * @type {Array<Answer>}
+     * @memberof Answers
+     */
+    answers: Array<Answer>;
+}
+
+export function AnswersFromJSON(json: any): Answers {
+    return AnswersFromJSONTyped(json, false);
+}
+
+export function AnswersFromJSONTyped(json: any, ignoreDiscriminator: boolean): Answers {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'userGUID': json['userGUID'],
+        'answers': ((json['answers'] as Array<any>).map(AnswerFromJSON)),
+    };
+}
+
+export function AnswersToJSON(value?: Answers | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'userGUID': value.userGUID,
+        'answers': ((value.answers as Array<any>).map(AnswerToJSON)),
+    };
+}
+
+
