# src/services/api/models/CorrectAnswer.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pretendent backend
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * The object describes the user response
+ * @export
+ * @interface CorrectAnswer
+ */
+export interface CorrectAnswer {
+    /**
+     * Question number
+     * @type {number}
+     * @memberof CorrectAnswer
+     */
+    id: number;
+    /**
+     * 
+     * @type {Array<number>}
+     * @memberof CorrectAnswer
+     */
+    answers: Array<number>;
+}
+
+export function CorrectAnswerFromJSON(json: any): CorrectAnswer {
+    return CorrectAnswerFromJSONTyped(json, false);
+}
+
+export function CorrectAnswerFromJSONTyped(json: any, ignoreDiscriminator: boolean): CorrectAnswer {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'],
+        'answers': json['answers'],
+    };
+}
+
+export function CorrectAnswerToJSON(value?: CorrectAnswer | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'id': value.id,
+        'answers': value.answers,
+    };
+}
+
+
