# src/services/api/models/Results.ts
@@ -1,0 +1,71 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pretendent backend
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.3
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    UserResult,
+    UserResultFromJSON,
+    UserResultFromJSONTyped,
+    UserResultToJSON,
+} from './';
+
+/**
+ * Results list
+ * @export
+ * @interface Results
+ */
+export interface Results {
+    /**
+     * 
+     * @type {Array<UserResult>}
+     * @memberof Results
+     */
+    users: Array<UserResult>;
+    /**
+     * Total count of users
+     * @type {number}
+     * @memberof Results
+     */
+    readonly count: number;
+}
+
+export function ResultsFromJSON(json: any): Results {
+    return ResultsFromJSONTyped(json, false);
+}
+
+export function ResultsFromJSONTyped(json: any, ignoreDiscriminator: boolean): Results {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'users': ((json['users'] as Array<any>).map(UserResultFromJSON)),
+        'count': json['count'],
+    };
+}
+
+export function ResultsToJSON(value?: Results | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'users': ((value.users as Array<any>).map(UserResultToJSON)),
+    };
+}
+
+
